--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ dependencies = [
     "azure-identity>=1.21.0",
     "azure-search>=1.0.0b2",
     "azure-search-documents>=11.5.2",
-    "weaviate-client>=4.4.0"
+    "weaviate-client>=4.4.0",
+    "boto3>=1.35.10"
 ]
 
 [project.optional-dependencies]
