--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 *.egg-info
 *.pyc
 
@@ -29,6 +28,12 @@ venv/
 env/
 ENV/
 .env
+.venv/
+
+# Package managers
+uv.lock
+poetry.lock
+Pipfile.lock
 
 # IDE specific files
 .idea/
@@ -61,7 +66,21 @@ node_modules/
 
 # LangGraph specific
 .langgraph/
+.langgraph_api/
 
 # Temporary files
 tmp/
 temp/
+
+# Cache directories
+.cache/
+*.cache
+
+# OS generated files
+Thumbs.db
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
