--- a/legal_discovery_frontend/package.json
+++ b/legal_discovery_frontend/package.json
@@ -31,8 +31,12 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-markdown": "^9.0.1",
+    "rehype-highlight": "^7.0.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.2.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "highlight.js": "^11.9.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
